WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150692
Very slow typing on pages with wheel event handlers on the body, and deep content
https://bugs.webkit.org/show_bug.cgi?id=150692
Summary
Very slow typing on pages with wheel event handlers on the body, and deep con...
Simon Fraser (smfr)
Reported
2015-10-29 14:21:43 PDT
Very slow typing on pages with wheel event handlers on the body, and deep content
Attachments
Patch
(2.28 KB, patch)
2015-10-29 14:23 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(2.32 KB, patch)
2015-10-29 14:24 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-10-29 14:23:28 PDT
Created
attachment 264344
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-10-29 14:24:13 PDT
Created
attachment 264345
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-10-29 14:24:28 PDT
rdar://problem/23242631
Chris Dumez
Comment 4
2015-10-29 14:54:13 PDT
Comment on
attachment 264345
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=264345&action=review
> Source/WebCore/dom/Document.cpp:6241 > + if (is<HTMLBodyElement>(element)) {
is<HTMLBodyElement>(*element) to avoid the null check.
Simon Fraser (smfr)
Comment 5
2015-10-29 14:55:27 PDT
https://trac.webkit.org/r191756
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug